--- a/11r-sketch-gallery-page/style.css
+++ b/11r-sketch-gallery-page/style.css
@@ -1,29 +1,29 @@
 /* Reset default margin and padding */
 * {
-  margin: 20;
-  padding: 20;
+  margin: 0;
+  padding: 0;
   box-sizing: border-box;
 }
 
 /* Set basic font styles */
 body {
   font-family: 'Montserrat', sans-serif;
-  font-size: 14px;
-  line-height: 1.5;
+  font-size: 16px;
+  line-height: 1.6;
   color: #333;
-  background-color: whitesmoke;
+  background-color: #f6f6f6;
 }
 
 /* Style the title */
 h1 {
-  margin: 2rem ;
-  font-size: 4rem;
-  font-weight: bold;
+  margin: 2rem auto;
+  font-size: 3.5rem;
+  font-weight: 700;
   text-align: center;
   text-transform: uppercase;
   color: #333;
   letter-spacing: 0.2rem;
-  text-shadow: 2px 2px gray;
+  text-shadow: 2px 2px 5px rgba(0, 0, 0, 0.3);
 }
 
 /* Add some padding to the top and bottom of the title */
@@ -36,14 +36,13 @@ h1 {
   display: flex;
   justify-content: center;
   align-items: center;
-  height: 0vh;
+  /* height: calc(100vh - 180px); */
   margin: 0 auto;
-  font-size: 2rem;
-  max-width: 1400px;
+  max-width: 2000px;
   padding: 2rem;
-  background-color: whitesmoke;
+  background-color: #fff;
   border-radius: 20px;
-  box-shadow: 0 0 20px rgba(0, 0, 0, 0.2);
+  box-shadow: 0 10px 20px rgba(0, 0, 0, 0.2);
 }
 
 
@@ -56,15 +55,15 @@ canvas {
 /* Style the project description */
 p {
   margin: 2rem auto;
-  max-width: 1800px;
+  max-width: 1400px;
   text-align: justify;
   font-size: 1.2rem;
   line-height: 1.6;
   color: #666;
   padding: 2rem;
-  background-color: whitesmoke;
+  background-color: #fff;
   border-radius: 20px;
-  box-shadow: 0 15 20px rgba(255, 0, 255, 0.2);
+  box-shadow: 0 10px 20px rgba(0, 0, 0, 0.2);
 }
 
 
@@ -76,7 +75,7 @@ canvas {
 
 /* Add a hover effect to the canvas */
 canvas:hover {
-  transform: scale(1.2);
+  transform: scale(1.1);
   transition: transform 0.2s ease-in-out;
 }
 
@@ -86,9 +85,10 @@ a {
   text-align: center;
   margin-top: 2rem;
   font-weight: bold;
-  color: #0e2b66;
+  color: #fff;
   text-decoration: none;
-  border: 2px solid #333;
+  background-color: #333;
+  border: none;
   padding: 1rem 2rem;
   transition: background-color 0.3s ease-in-out;
   font-size: 1.2rem;
@@ -96,8 +96,31 @@ a {
 }
 
 a:hover {
-  background-color: #333;
-  color: #21222d;
+  background-color: #21222d;
 }
 
+/* Add animation background */
+body:before {
+  content: "";
+  position: fixed;
+  z-index: -3;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: linear-gradient(to bottom, #00ffff 0%, #6A5ACD 100%);
+  animation: animationBackground 20s ease infinite alternate;
+}
 
+@keyframes animationBackground {
+  0% {
+    transform: skewY(-30deg);
+  }
+  50% {
+    transform: skewY(30deg);
+  }
+  100% {
+    transform: skewY(-30deg);
+
+  }
+}
