--- a/wedding-invitation-website-main/style.css
+++ b/wedding-invitation-website-main/style.css
@@ -343,7 +343,7 @@ a:hover{
 .hands{
     height: 120vh;
     width: 100%;
-    background-image: url(https://firebasestorage.googleapis.com/v0/b/chuck-842bb.appspot.com/o/GurAmanWed%2Fpic6.jpg?alt=media&token=febecde7-9479-4a1e-8402-28f021228422);
+    background-image: url(https://images.squarespace-cdn.com/content/v1/58d1b3ff1b631bb1893d108d/73b7bf90-d238-47f9-9fec-26aaab8089ae/how-to-write-wedding-vows-3.jpg);
     background-size: cover;
     background-position-y: center;
     background-attachment: fixed;
