--- a/Project B/style.css
+++ b/Project B/style.css
@@ -54,6 +54,7 @@ main {
 /* style the canvas container */
 #canvasContainer {
   margin: 0;
+  text-align: center;
   width: 100%;
   /* height: 100vh; */
   /* border: 5px solid #333;*/
